Fix footer overlapping

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,7 @@ section {
   width: auto;
   float:none;
 }
+
+footer {
+  position: static;
+}
